# jund-f0

./: README.md  pyproject.toml
download/jund-f0/: .gitignore  README.md  pyproject.toml
download/jund-f0/configs/: default.yaml
download/jund-f0/jund_f0/: config.py  dataset.py  metrics.py
download/jund-f0/jund_f0.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
download/jund-f0/notebooks/: train_colab.ipynb
jund_f0/: __init__.py  infer.py  model.py  train.py
notebooks/: train_colab.ipynb
scripts/: infer.py  test_install.py  train.py
