[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jund-f0"
version = "0.1.0"
description = "JUND-F0: Joint Unvoiced/Voiced Detection and F0 Estimation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "JUND-F0 Authors"},
]

dependencies = [
    "torch>=1.13",
    "torchaudio>=2.0",
    "numpy>=1.21",
    "librosa>=0.9",
    "soundfile>=0.11",
    "pyyaml>=6.0",
    "tensorboard>=2.10",
    "tqdm>=4.60",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]
crepe = [
    "crepe>=0.0.15",
]
datasets = [
    "datasets>=2.14",
]
wandb = [
    "wandb>=0.13",
]

[project.scripts]
jund-train = "jund_f0.scripts.train:main"
jund-infer = "jund_f0.scripts.infer:main"

[tool.setuptools.packages.find]
include = ["jund_f0*"]
